--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
 
 <head>
-    <title>Name of search engine</title>
+
+    <title>Ask Athena</title>
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha384-Ft/vb48LwsAEtgltj7o+6vtS2esTU9PCpDqcXs4OCVQFZu5BqprHtUCZ4kjK+bpE" crossorigin="anonymous"></script>
     <!--jQuery UI theme-->
@@ -15,12 +16,15 @@
 </head>
 
 <body>
-    <h1 id="searchEngineName">Name of search engine</h1>
+    <h1 id="AskAthenaHeader">Ask Athena</h1>
+    <br />
     <input type="text" id="query"/>
-    
+    <br />  
     <button id="Search">Search</button>
 
     <button id="currentTime">Display Current Time</button>
+
+    <button id="feelingLuckyButton">I'm Feeling Lucky</button>
 
     <div id="searchResults"> </div>
     <div id="time"></div>
